layout bug fixes

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -130,8 +130,8 @@
 }
 
 
-//mobile
-@media (max-width: 599px) { 
+//mobile and tablet
+@media (max-width: 768px) { 
     #page-room{
         header{
     
@@ -140,6 +140,7 @@
             }
 
             .content {
+
                 .menu{
                     visibility: hidden;
                     background: #f8f8f8;
@@ -158,8 +159,9 @@
                 }
 
                 div{
+                    
                     flex: 1;
-
+                    justify-content: flex-end;
                     .hamburguer-menu{
                         visibility: visible;
                         flex:1;
@@ -186,12 +188,44 @@
     }
  }
 
- //tablet
-@media (min-width: 600px) { 
-    
+ // Desktop and up
+ @media (min-width: 769px) { 
+    #page-room{
+        header{
+
+
+            .content {
+
+                .menu{
+                    visibility: visible;
+                }
+
+                .hamburguer-menu{
+                    display: none;
+                }
+
+                div{
+                    
+                    flex: 1;
+                    justify-content: flex-end;
+
+                    .room-code{
+                        flex: 5;
+                    }
+                }
+
+
+
+                .menu.show{
+                    visibility: visible;
+                }
+            }
+        }
+
+        main{
+            padding: 0 40px;
+            padding-bottom: 40px;
+        }
+    }
  }
 
-//Desktop
-@media (min-width: 1200px) { 
-    
- }
